Add Hour Processor and Immutable Collection